--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>CaptAI</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/icons/marca-dell-lead.png">
+  <link rel="icon" type="image/x-icon" href="./assets/icons/captiLogo.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://uicore.dellcdn.com/1.6.1/css/dds-all-with-fonts.min.css">
